--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,18 @@
 [package]
-name = "filter-city-rust"
+name = "filter-city"
 version = "0.1.0"
-authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
+authors = ["Stéphane Bressani <s.bressani@bluewin.ch>"]
+keywords = ["city"]
+# crates.io/category_slugs
+categories = ["value-formatting"]
+license = "GPL-3.0"
+readme = "README.md"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# rustc-serialize = "0.3"
 serde = { version = "1.0.102", features = ["derive"] }
 serde_json = "1.0.41"
 serde_derive = "1.0.102"
+unidecode = "0.3.0"
