--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "filter_city"
-version = "0.1.0"
+name = "filter-city"
+version = "0.1.1"
 authors = ["Stéphane Bressani <s.bressani@bluewin.ch>"]
 keywords = ["city"]
 # crates.io/category_slugs
